actualización de estilos

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,6 +30,7 @@
 @use 'components/hero';
 @use 'components/intro';
 @use 'components/dropdowns';
+@use 'components/profile';
 
 // 6. PÁGINAS
 @use 'pages/home';
